<resources>
    <string name="app_name">APP_FES_Rowing_V.0.0</string>
    <string name="conectar_bluetooth">Conectar Bluetooth</string>
    <string name="terminal">Terminal</string>
    <string name="ajuste_de_par_metros">Ajuste de Parâmetros</string>
    <string name="aquecimento_e_sincronia">Aquecimento e Sincronia</string>
    <string name="treino_de_velocidade">Treino de Velocidade</string>
    <string name="treino_livre">Treino Livre</string>
    <string name="treino_compensador_de_fadiga">Treino Compensador de Fadiga</string>
    <string name="Text_Apresentacao">Aplicativo Desenvolvido por Breno em seu Doutorado</string>
    <string name="amplitude_ch_1_e_2_extens_o">Amplitude CH 1 e 2 (Extensão)</string>
    <string name="amplitude_ch_3_e_4_extens_o">Amplitude CH 3 e 4 (Flexão)</string>
    <string name="amplitude_ch_5_e_6_extens_o">Amplitude CH 5 e 6 (Aux. Extensão)</string>
    <string name="amplitude_ch_7_e_8_extens_o">Amplitude CH 7 e 8 (Aux. Flexão)</string>
    <string name="n_a">n/a</string>
    <string name="ma">(mA)</string>
    <string name="voltar"><![CDATA[< Voltar]]></string>
    <string name="enviar_para_o_estimulador">Enviar para o Estimulador</string>
    <string name="frequ_ncia">Frequência</string>
    <string name="hz">(Hz)</string>
    <string name="largura_de_pulso">Largura de Pulso</string>
    <string name="s">(µs)</string>
    <string name="posi_o_do_banco">Posição do Banco</string>
    <string name="cad_ncia">Cadência</string>
    <string name="Turning_on_BT">Ligar o Bluetooth...</string>


</resources>
